--- a/mobile-first/index.html
+++ b/mobile-first/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dream Cafe</title>
+    <title>Dream Café</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,8 @@
     </header>
 
     <section id="welcome">
-        <h2>Welcome to... basta</h2>
+        <h2>Velkommen til Dream Café, hvor du finner den koseligste atmosfæren 
+            og et perfekt sted å slappe av eller treffe venner!</h2>
     </section>
 
     <section id="menu">
@@ -32,7 +33,7 @@
         <p>Telefon: 22 33 44 55</p>
     
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2123.0157684713035!2d10.484490132135917!3d63.419930258005934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sno!4v1743959960868!5m2!1sen!2sno"
-        width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </section>
     
