--- a/mobile-first/index.html
+++ b/mobile-first/index.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <h1>Dream Café</h1>
+        <nav>
+            <ul>
+                <li><a href="#meny">Meny</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="welcome">
@@ -24,8 +30,10 @@
     <section id="order">
         <h2>Bestillingsskjema</h2>
         <ul id="order-list"></ul>
+        <div id="total-price">Total Pris: 0kr</div> 
         <button onclick="submitOrder()">Send bestilling</button>
     </section>
+    
 
     <section id="contact">
         <h2>Kontakt oss</h2>
